Added dependency modules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,6 @@
+[submodule "dependencies/cassette"]
+	path = dependencies/cassette
+	url = https://github.com/andrewdavey/cassette.git
 [submodule "dependencies/Nancy"]
 	path = dependencies/Nancy
 	url = https://github.com/NancyFx/Nancy.git
-[submodule "dependencies/Cassette"]
-	path = dependencies/Cassette
-	url = https://github.com/andrewdavey/cassette.git
-  
