--- a/src/Nancy.Cassette.Demo.RazorViewEngine/Web.config
+++ b/src/Nancy.Cassette.Demo.RazorViewEngine/Web.config
@@ -1,24 +1,22 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <configSections>
-    <section name="razor" type="Nancy.ViewEngines.Razor.RazorConfigurationSection, Nancy.ViewEngines.Razor" />
+    <section name="razor" type="Nancy.ViewEngines.Razor.RazorConfigurationSection, Nancy.ViewEngines.Razor"/>
   </configSections>
-
   <razor disableAutoIncludeModelNamespace="false">
     <assemblies>
-      <add assembly="Cassette" />
+      <add assembly="Cassette"/>
     </assemblies>
     <namespaces>
-      <add namespace="Cassette.UI" />
+      <add namespace="Cassette.UI"/>
     </namespaces>
   </razor>
-
   <system.web>
     <httpHandlers>
       <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
     </httpHandlers>
+    <compilation debug="true"/>
   </system.web>
-
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
     <handlers>
