Partial integration with Nancy pipeline.  Razor views generate html with correct Cassette hooks.

--- a/src/Nancy.Cassette.Demo.RazorViewEngine/Web.config
+++ b/src/Nancy.Cassette.Demo.RazorViewEngine/Web.config
@@ -3,7 +3,7 @@
   <configSections>
     <section name="razor" type="Nancy.ViewEngines.Razor.RazorConfigurationSection, Nancy.ViewEngines.Razor"/>
   </configSections>
-  <razor disableAutoIncludeModelNamespace="false">
+  <razor disableAutoIncludeModelNamespace="true">
     <assemblies>
       <add assembly="Cassette"/>
     </assemblies>
