--- a/src/Nancy.Cassette/Nancy.Cassette.csproj
+++ b/src/Nancy.Cassette/Nancy.Cassette.csproj
@@ -45,8 +45,10 @@
     </Compile>
     <Compile Include="CassetteApplication.cs" />
     <Compile Include="CassetteModule.cs" />
+    <Compile Include="CassetteResponseFormatter.cs" />
     <Compile Include="Hooks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UrlGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\dependencies\cassette\src\Cassette\Cassette.csproj">
