--- a/src/Nancy.Cassette.Demo.RazorViewEngine/Nancy.Cassette.Demo.RazorViewEngine.csproj
+++ b/src/Nancy.Cassette.Demo.RazorViewEngine/Nancy.Cassette.Demo.RazorViewEngine.csproj
@@ -51,6 +51,10 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\app\layout.coffee" />
+    <Content Include="Scripts\lib\jquery-1.6.4.js" />
+    <Content Include="Scripts\lib\underscore.js" />
+    <Content Include="Styles\app\Main.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -87,11 +91,7 @@
       <Name>Nancy.Cassette</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Scripts\app\" />
-    <Folder Include="Scripts\lib\" />
-    <Folder Include="Styles\app\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Views\Home.cshtml" />
   </ItemGroup>
