--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Nancy.Cassette.Test\packages.config" />
+  <repository path="..\Nancy.Cassette\packages.config" />
+  <repository path="..\Nancy.Cassette.Demo.RazorViewEngine\packages.config" />
 </repositories>
