--- a/src/Nancy.Cassette/Nancy.Cassette.csproj
+++ b/src/Nancy.Cassette/Nancy.Cassette.csproj
@@ -51,6 +51,7 @@
     <Compile Include="CassetteResponseFormatter.cs" />
     <Compile Include="Hooks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StaticFileHandler.cs" />
     <Compile Include="UrlGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
