--- a/src/Nancy.Cassette.Test/Nancy.Cassette.Test.csproj
+++ b/src/Nancy.Cassette.Test/Nancy.Cassette.Test.csproj
@@ -31,19 +31,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ninject">
-      <HintPath>..\packages\Ninject.2.2.1.4\lib\net40-Full\Ninject.dll</HintPath>
-    </Reference>
-    <Reference Include="NLog">
-      <HintPath>..\packages\NLog.2.0.0.2000\lib\net40\NLog.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.framework">
+    <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.2.5.10.11092\lib\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.mocks">
+    <Reference Include="nunit.mocks, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.2.5.10.11092\lib\nunit.mocks.dll</HintPath>
     </Reference>
-    <Reference Include="pnunit.framework">
+    <Reference Include="pnunit.framework, Version=1.0.4109.34242, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.2.5.10.11092\lib\pnunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -53,34 +47,18 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Utility.Logging">
-      <HintPath>..\packages\Utility.Logging.1.3\lib\net40\Utility.Logging.dll</HintPath>
-    </Reference>
-    <Reference Include="Utility.Logging.NLog">
-      <HintPath>..\packages\Utility.Logging.NLog.1.3\lib\net40\Utility.Logging.NLog.dll</HintPath>
-    </Reference>
-    <Reference Include="Utility.Logging.NLog.Ninject">
-      <HintPath>..\packages\Utility.Logging.NLog.Ninject.1.3\lib\net40\Utility.Logging.NLog.Ninject.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\CommonAssemblyInfo.cs">
-      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    <Compile Include="CassetteStartupTest.cs">
+      <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CassetteModuleTest.cs" />
-    <Compile Include="NLogLoggerModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RazorViewTest.cs" />
-    <Compile Include="HooksTest.cs" />
-    <Compile Include="TestBootstrapper.cs" />
     <Compile Include="TestCassetteConfiguration.cs" />
     <Compile Include="TestModule.cs" />
     <Compile Include="TestRazorConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="nlog.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Include="packages.config" />
     <None Include="Views\RazorHome.cshtml" />
   </ItemGroup>
