--- a/src/Nancy.Cassette/Nancy.Cassette.csproj
+++ b/src/Nancy.Cassette/Nancy.Cassette.csproj
@@ -38,18 +38,37 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Utility.Logging">
-      <HintPath>..\packages\Utility.Logging.1.3\lib\net40\Utility.Logging.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="CassetteApplication.cs" />
-    <Compile Include="Hooks.cs" />
+    <Compile Include="CassetteApplication.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="CassetteStartup.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="CompiledAssetHandler.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="ICassetteHandler.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="ModuleHandler.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UrlGenerator.cs" />
+    <Compile Include="RawFileHandler.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="StaticContentHandler.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Trace.cs" />
+    <Compile Include="UrlAndPathGenerator.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\dependencies\cassette\src\Cassette\Cassette.csproj">
@@ -60,9 +79,6 @@
       <Project>{34576216-0DCA-4B0F-A0DC-9075E75A676F}</Project>
       <Name>Nancy</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
