--- a/src/Nancy.Cassette.Demo.RazorViewEngine/Web.config
+++ b/src/Nancy.Cassette.Demo.RazorViewEngine/Web.config
@@ -23,4 +23,13 @@
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
     </handlers>
   </system.webServer>
+
+  <system.diagnostics>
+    <sources>
+      <source name="Nancy.Cassette" switchName="SourceSwitch" switchType="System.Diagnostics.SourceSwitch"/>
+    </sources>
+    <switches>
+      <add name="SourceSwitch" value="All"/>
+    </switches>
+  </system.diagnostics>
 </configuration>
