--- a/src/Nancy.Cassette.Test/packages.config
+++ b/src/Nancy.Cassette.Test/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NLog" version="2.0.0.2000" />
   <package id="NUnit" version="2.5.10.11092" />
+  <package id="Utility.Logging" version="1.3" />
+  <package id="Utility.Logging.NLog" version="1.3" />
 </packages>
