--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\Nancy.Cassette.Demo.RazorViewEngine\packages.config" />
   <repository path="..\Nancy.Cassette.Demo.MVC3ForCompairson\packages.config" />
   <repository path="..\Nancy.Cassette.Test\packages.config" />
+  <repository path="..\Nancy.Cassette\packages.config" />
 </repositories>
