Moved some files around, changed dependent packages

--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\Nancy.Cassette.Demo.RazorViewEngine\packages.config" />
   <repository path="..\Nancy.Cassette.Demo.MVC3ForCompairson\packages.config" />
   <repository path="..\Nancy.Cassette.Test\packages.config" />
+  <repository path="..\Nancy.Cassette\packages.config" />
+  <repository path="..\Nancy.Cassette.Demo.RazorViewEngine\packages.config" />
 </repositories>
