--- a/src/Nancy.Cassette/Nancy.Cassette.nuspec
+++ b/src/Nancy.Cassette/Nancy.Cassette.nuspec
@@ -10,5 +10,8 @@
     <description>$description$</description>
     <copyright>Copyright 2011</copyright>
     <tags>Cassette Nancy</tags>
+    <dependencies>
+      <dependency id="Nancy" />
+    </dependencies>
   </metadata>
 </package>
