--- a/src/Nancy.Cassette/Nancy.Cassette.nuspec
+++ b/src/Nancy.Cassette/Nancy.Cassette.nuspec
@@ -11,7 +11,14 @@
     <copyright>Copyright 2011</copyright>
     <tags>Cassette Nancy</tags>
     <dependencies>
-      <dependency id="Nancy" />
+      <dependency id="Nancy" version="0.9" />
+      <dependency id="AjaxMin" version="4.19" />
+      <dependency id="Jurassic" version="2.1" />
     </dependencies>
   </metadata>
+
+  <files>
+    <file src="..\..\dependencies\cassette\src\Cassette\bin\Release\Cassette.dll" target="lib\net40" />
+    <file src="..\..\dependencies\cassette\src\Cassette.Web\CassetteConfiguration.cs.pp" target="content"/>
+  </files>
 </package>
