Static content served by Nancy not munged by Nancy.Cassette. External script module names not included in static content handling.

--- a/src/Nancy.Cassette.Demo.RazorViewEngine/Nancy.Cassette.Demo.RazorViewEngine.csproj
+++ b/src/Nancy.Cassette.Demo.RazorViewEngine/Nancy.Cassette.Demo.RazorViewEngine.csproj
@@ -60,8 +60,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Images\tag.png" />
     <Content Include="Scripts\app\layout.coffee" />
-    <Content Include="Scripts\lib\jquery-1.6.4.js" />
+    <Content Include="Scripts\fallback\jquery-1.6.4.js" />
+    <Content Include="Scripts\lib\module.txt" />
     <Content Include="Scripts\lib\underscore.js" />
     <Content Include="Styles\app\images\lorry.png" />
     <Content Include="Styles\app\Main.css" />
