--- a/src/Nancy.Cassette.Test/Nancy.Cassette.Test.csproj
+++ b/src/Nancy.Cassette.Test/Nancy.Cassette.Test.csproj
@@ -85,9 +85,12 @@
     </Compile>
     <Compile Include="CompiledAssetHandlerTest.cs" />
     <Compile Include="GlobalTest.cs" />
+    <Compile Include="ModuleHandlerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RawFileHandlerTest.cs" />
     <Compile Include="RazorViewTest.cs" />
     <Compile Include="StaticContentHandlerTest.cs" />
+    <Compile Include="TestBootstrapper.cs" />
     <Compile Include="TestCassetteConfiguration.cs" />
     <Compile Include="TestModule.cs" />
     <Compile Include="TestRazorConfiguration.cs" />
@@ -110,17 +113,21 @@
       <Name>Nancy.Cassette</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\app\layout.coffee" />
-    <Content Include="Scripts\lib\jquery-1.6.4.js" />
+    <Content Include="Scripts\fallback\jquery-1.6.4.js" />
+    <Content Include="Scripts\lib\module.txt" />
     <Content Include="Scripts\lib\underscore.js" />
     <Content Include="Styles\app\images\lorry.png" />
     <Content Include="Styles\app\Main.css" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>Call "$(ProjectDir)setup_test_environment.bat" Scripts "$(ProjectDir)" "$(TargetDir)"
+    <PostBuildEvent>Call "$(ProjectDir)setup_test_environment.bat" Images "$(ProjectDir)" "$(TargetDir)"
+Call "$(ProjectDir)setup_test_environment.bat" Scripts "$(ProjectDir)" "$(TargetDir)"
 Call "$(ProjectDir)setup_test_environment.bat" Styles "$(ProjectDir)" "$(TargetDir)"
 Call "$(ProjectDir)setup_test_environment.bat" Views "$(ProjectDir)" "$(TargetDir)"
 
