--- a/src/Nancy.Cassette.Demo.MVC3ForCompairson/Nancy.Cassette.Demo.MVC3ForCompairson.csproj
+++ b/src/Nancy.Cassette.Demo.MVC3ForCompairson/Nancy.Cassette.Demo.MVC3ForCompairson.csproj
@@ -34,18 +34,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AjaxMin">
-      <HintPath>..\packages\AjaxMin.4.19.4141.18463\lib\AjaxMin.dll</HintPath>
-    </Reference>
-    <Reference Include="Cassette">
-      <HintPath>..\packages\Cassette.0.8.3\lib\net40\Cassette.dll</HintPath>
-    </Reference>
-    <Reference Include="Cassette.Web">
-      <HintPath>..\packages\Cassette.Web.0.8.3\lib\net40\Cassette.Web.dll</HintPath>
-    </Reference>
-    <Reference Include="Jurassic">
-      <HintPath>..\packages\Jurassic.2.1.1\lib\Jurassic.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
@@ -87,9 +75,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
-    <Content Include="Scripts\lib\jquery-1.6.4.js" />
+    <Content Include="Images\kitten.jpg" />
+    <Content Include="Scripts\lib\jquery-1.7.js" />
+    <Content Include="Scripts\lib\bundle.txt" />
     <Content Include="Scripts\lib\underscore.js" />
-    <Content Include="Styles\app\Main.css" />
+    <Content Include="Styles\Main.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -112,6 +102,20 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Scripts\app\layout.coffee" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\dependencies\cassette\src\Cassette.Views\Cassette.Views.csproj">
+      <Project>{3A021487-A395-4FE6-9B41-336D0F1E6AD0}</Project>
+      <Name>Cassette.Views</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\dependencies\cassette\src\Cassette.Web\Cassette.Web.csproj">
+      <Project>{733F8032-D649-4E4C-A23E-4A048C33FCAE}</Project>
+      <Name>Cassette.Web</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\dependencies\cassette\src\Cassette\Cassette.csproj">
+      <Project>{A5CCF9D3-5D49-4BFC-B9A6-9EC9E0E29C50}</Project>
+      <Name>Cassette</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
