--- a/src/Nancy.Cassette/Nancy.Cassette.nuspec
+++ b/src/Nancy.Cassette/Nancy.Cassette.nuspec
@@ -1,19 +1,22 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>$id$</id>
+    <id>Nancy.Cassette</id>
     <version>$version$</version>
-    <title>$title$</title>
-    <authors>$author$</authors>
-    <owners>$author$</owners>
+    <title>Nancy.Cassette</title>
+    <authors>Chris Hogan</authors>
+    <owners>Chris Hogan</owners>
+    <licenseUrl>http://www.opensource.org/licenses/mit-license.php</licenseUrl>
+    <projectUrl>https://github.com/ChrisMH/Nancy.Cassette</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>$description$</description>
+    <description>Cassette integration into the Nancy web framework</description>
     <copyright>Copyright 2011</copyright>
     <tags>Cassette Nancy</tags>
     <dependencies>
-      <dependency id="Nancy" version="0.9" />
+      <dependency id="Nancy" version="0.9.0" />
       <dependency id="AjaxMin" version="4.19" />
       <dependency id="Jurassic" version="2.1" />
+      <dependency id="Newtonsoft.Json" version="4.0.3" />
     </dependencies>
   </metadata>
 
