--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,6 @@
 [submodule "dependencies/cassette"]
 	path = dependencies/cassette
-	url = https://github.com/andrewdavey/cassette.git
+	url = git@github.com:ChrisMH/cassette.git
 [submodule "dependencies/Nancy"]
 	path = dependencies/Nancy
 	url = https://github.com/NancyFx/Nancy.git
-  
-[submodule "dependencies/Nancy.Bootstrappers.Autofac"]
-	path = dependencies/Nancy.Bootstrappers.Autofac
-	url = https://github.com/NancyFx/Nancy.Bootstrappers.Autofac.git
