--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -4,4 +4,5 @@
   <repository path="..\Nancy.Cassette.Test\packages.config" />
   <repository path="..\Nancy.Cassette.Demo.RazorViewEngine\packages.config" />
   <repository path="..\Nancy.Cassette\packages.config" />
+  <repository path="..\Nancy.Cassette.Demo.Autofac\packages.config" />
 </repositories>
