Finished rename, integrating latest Cassette API changes

--- a/src/Cassette.Nancy.Demo.Autofac/Cassette.Nancy.Demo.Autofac.csproj
+++ b/src/Cassette.Nancy.Demo.Autofac/Cassette.Nancy.Demo.Autofac.csproj
@@ -110,7 +110,7 @@
       <Project>{2C6F51DF-015C-4DB6-B44C-0E5E4F25E2A9}</Project>
       <Name>Nancy.ViewEngines.Razor</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Nancy.Cassette\Nancy.Cassette.csproj">
+    <ProjectReference Include="..\Cassette.Nancy\Cassette.Nancy.csproj">
       <Project>{7514833D-27E3-42B1-9BF7-CAE8CBAB0446}</Project>
       <Name>Nancy.Cassette</Name>
     </ProjectReference>
