Finished renaming to Cassette.Nancy, updated to Cassette 0.9.0 API.

--- a/src/Cassette.Nancy.Demo.Autofac/Web.config
+++ b/src/Cassette.Nancy.Demo.Autofac/Web.config
@@ -5,6 +5,7 @@
   </configSections>
   <razor disableAutoIncludeModelNamespace="true">
     <assemblies>
+      <add assembly="Cassette"/>
       <add assembly="Cassette.Views"/>
     </assemblies>
     <namespaces>
