--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,8 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\Nancy.Cassette.Demo.MVC3ForCompairson\packages.config" />
-  <repository path="..\Nancy.Cassette.Test\packages.config" />
-  <repository path="..\Nancy.Cassette.Demo.RazorViewEngine\packages.config" />
-  <repository path="..\Nancy.Cassette\packages.config" />
-  <repository path="..\Nancy.Cassette.Demo.Autofac\packages.config" />
+  <repository path="..\Cassette.Nancy.Demo.MVC3\packages.config" />
+  <repository path="..\Cassette.Nancy.Demo.Autofac\packages.config" />
 </repositories>
