--- a/src/Cassette.Nancy/Cassette.Nancy.nuspec
+++ b/src/Cassette.Nancy/Cassette.Nancy.nuspec
@@ -14,15 +14,8 @@
     <tags>Cassette Nancy</tags>
     <dependencies>
       <dependency id="Nancy" version="0.9.0" />
-      <dependency id="AjaxMin" version="4.19" />
-      <dependency id="Jurassic" version="2.1" />
-      <dependency id="Newtonsoft.Json" version="4.0.3" />
+      <dependency id="Cassette" version="0.9.0" />
+      <dependency id="Cassette.Views" version="0.9.0" />
     </dependencies>
   </metadata>
-
-  <files>
-    <file src="..\..\dependencies\cassette\src\Cassette\bin\Release\Cassette.dll" target="lib\net40" />
-    <file src="..\..\dependencies\cassette\src\Cassette.Views\bin\Release\Cassette.Views.dll" target="lib\net40" />
-    <file src="..\..\dependencies\cassette\src\Cassette.Web\CassetteConfiguration.cs.pp" target="content"/>
-  </files>
 </package>
