--- a/src/Cassette.Nancy/Cassette.Nancy.nuspec
+++ b/src/Cassette.Nancy/Cassette.Nancy.nuspec
@@ -13,9 +13,9 @@
     <copyright>Copyright 2011</copyright>
     <tags>Cassette Nancy</tags>
     <dependencies>
+      <dependency id="Utility.Logging" version="1.3.2.0" />
       <dependency id="Nancy" version="0.9.0" />
-      <dependency id="Cassette" version="0.9.0" />
-      <dependency id="Cassette.Views" version="0.9.0" />
+      <dependency id="Cassette" version="0.9.1" />
     </dependencies>
   </metadata>
 </package>
