--- a/src/Cassette.Nancy.Test/Cassette.Nancy.Test.csproj
+++ b/src/Cassette.Nancy.Test/Cassette.Nancy.Test.csproj
@@ -57,6 +57,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Utility">
+      <HintPath>..\packages\Utility.0.5.3.0\lib\net40\Utility.dll</HintPath>
+    </Reference>
     <Reference Include="Utility.Logging, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Utility.Logging.1.3.2.0\lib\net40\Utility.Logging.dll</HintPath>
