--- a/src/Cassette.Nancy.Test/packages.config
+++ b/src/Cassette.Nancy.Test/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="NLog" version="2.0.0.2000" />
   <package id="NUnit" version="2.5.10.11092" />
+  <package id="Utility" version="0.5.3.0" />
   <package id="Utility.Logging" version="1.3.1.0" />
   <package id="Utility.Logging" version="1.3.2.0" />
   <package id="Utility.Logging.NLog" version="1.3.2.0" />
