Updated cassette dependency

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "dependencies/cassette"]
 	path = dependencies/cassette
-	url = git@github.com:ChrisMH/cassette.git
+	url = https://github.com/andrewdavey/cassette.git
 [submodule "dependencies/Nancy"]
 	path = dependencies/Nancy
 	url = https://github.com/NancyFx/Nancy.git
