--- a/src/Cassette.Nancy.Test/Cassette.Nancy.Test.csproj
+++ b/src/Cassette.Nancy.Test/Cassette.Nancy.Test.csproj
@@ -57,21 +57,23 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Utility">
-      <HintPath>..\packages\Utility.0.6.0.0\lib\net40\Utility.dll</HintPath>
-    </Reference>
-    <Reference Include="Utility.Logging, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Utility, Version=0.6.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Utility.Logging.1.3.2.0\lib\net40\Utility.Logging.dll</HintPath>
+      <HintPath>..\packages\Utility.0.6.1.0\lib\net40\Utility.dll</HintPath>
     </Reference>
-    <Reference Include="Utility.Logging.NLog, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Utility.Logging, Version=1.3.3.1, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Utility.Logging.NLog.1.3.2.0\lib\net40\Utility.Logging.NLog.dll</HintPath>
+      <HintPath>..\packages\Utility.Logging.1.3.3.1\lib\net40\Utility.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="Utility.Logging.NLog, Version=1.3.3.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Utility.Logging.NLog.1.3.3.1\lib\net40\Utility.Logging.NLog.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssetRouteHandlerTest.cs" />
     <Compile Include="BundleRouteHandlerTest.cs" />
+    <Compile Include="HudRouteHandlerTest.cs" />
     <Compile Include="TestCassetteConfigurationToo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RawFileRouteHandlerTest.cs" />
