--- a/src/Cassette.Nancy/Cassette.Nancy.csproj
+++ b/src/Cassette.Nancy/Cassette.Nancy.csproj
@@ -38,9 +38,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Utility.Logging, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Utility.Logging, Version=1.3.3.1, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Utility.Logging.1.3.2.0\lib\net40\Utility.Logging.dll</HintPath>
+      <HintPath>..\packages\Utility.Logging.1.3.3.1\lib\net40\Utility.Logging.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -57,6 +57,7 @@
     <Compile Include="AssetRouteHandler.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="HudRouteHandler.cs" />
     <Compile Include="ICassetteRouteHandler.cs">
       <SubType>Code</SubType>
     </Compile>
