Working on upgrade testing

--- a/src/Cassette.Nancy.Test/nlog.config
+++ b/src/Cassette.Nancy.Test/nlog.config
@@ -29,7 +29,7 @@
             minlevel="error"
             writeTo="errfile" />
     <logger name="*"
-            minlevel="debug"
+            minlevel="trace"
             writeTo="udp" />
   </rules>
 </nlog>
